# ned

./: Cargo.toml  README.md  index.html  main.py  package-lock.json  package.json  requirements.txt  vite.config.js
src/: App.jsx  App.tsx  app.js  app.scss  index.html  main.js  main.jsx  main.rs  main.tsx  theme.js
src-tauri/: Cargo.toml  db.json  displays.json  tauri.conf.json
src-tauri/src/: border.rs  cursor.rs  db.rs  enum_monitors.rs  lib.rs  main.rs  monitor.rs
src/Components/Actions/: Actions.js  Actions.scss
src/Components/CommandHeader/: CommandHeader.jsx  CommandHeader.scss
src/Components/Display/: Display.jsx  Display.scss
src/Components/DisplayContainer/: DisplayContainer.jsx  DisplayContainer.scss
src/Components/Header/: Header.js  Header.jsx  Header.scss
src/Components/MainScreen/: MainScreen.js  MainScreen.scss
src/types/: border.d.ts  monitor.d.ts
